--- a/home.html
+++ b/home.html
@@ -8,6 +8,14 @@
   <header>
     <h1>Virtual Concerts</h1>
 
+    <div class="concert">
+  <img src="https://media.istockphoto.com/id/1322277517/photo/wild-grass-in-the-mountains-at-sunset.jpg?s=612x612&w=0&k=20&c=6mItwwFFGqKNKEAzv0mv6TaxhLN3zSE43bWmFN--J5w=" alt="Concert thumbnail">
+
+  <h3>Concert title</h3>
+
+  <p>Concert date</p>
+</div>
+
     <div id="user-avatar">
       <img src="https://example.com/avatar.png" alt="User avatar">
     </div>
